# slash-slack

./: README.md  example.py  main.py  mock_slack_client.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml
example/: Dockerfile  main.py  requirements.txt
how_to/: how_to_create_slash_slack_bot_python.md
how_to/app/: Dockerfile  main.py  requirements.txt  startup.sh
scripts/: runUnitTests.sh
slash_slack/: __init__.py  arg_functions.py  arg_types.py  blocks.py  exceptions.py  flag.py  mock_slack.py  signature_verifier.py  slash_slack.py  slash_slack_command.py  slash_slack_request.py
tests/: test_arg_types.test.py  test_parse_command_text.test.py  test_parse_func_params.test.py  test_slash_slack.test.py  test_slash_slack_command.test.py
