[project]
name = "slash-slack"
version = "0.1.5"
authors = [
  { name="Henry Jones", email="henryivesjones@gmail.com" },
]
description = "A python framework for slack slash bots."
readme = "README.md"
requires-python = ">=3.6"
license = {text="GPL-3.0-or-later"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "aiohttp",
  "fastapi"
]

keywords = [
  "slack",
  "fastapi",
  "bot",
  "slash command"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mock-slack = "slash_slack.mock_slack:main"
